--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # requirements.txt
-numpy==1.26.4
-pandas==2.1.1
-matplotlib==3.8.1
-plotly==6.1.0
-
+numpy
+pandas
+matplotlib
+plotly
+rapidfuzz
 
